@@ -174,6 +174,9 @@ extern uint8_t *VideoGrab(int *, int *, int *, int);
     /// Grab screen raw.
 extern uint8_t *VideoGrabService(int *, int *, int *);
 
+    /// Get decoder statistics.
+extern void VideoGetStats(VideoHwDecoder *, int *, int *, int *, int *);
+
 extern void VideoOsdInit(void);		///< Setup osd.
 extern void VideoOsdExit(void);		///< Cleanup osd.
 
